--- a/web/pom.xml
+++ b/web/pom.xml
@@ -20,6 +20,8 @@
 
 	<properties>
 		<java.version>17</java.version>
+		<zk.version>9.6.0.2-jakarta</zk.version>
+		<servlet.version>6.0.0</servlet.version>
 	</properties>
 
 	<dependencies>
@@ -39,6 +41,25 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>org.zkoss.zk</groupId>
+			<artifactId>zk</artifactId>
+			<version>${zk.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.zkoss.zk</groupId>
+			<artifactId>zul</artifactId>
+			<version>${zk.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>jakarta.servlet</groupId>
+			<artifactId>jakarta.servlet-api</artifactId>
+			<scope>provided</scope>
+		</dependency>
+
 	</dependencies>
 
 	<build>
