--- a/web/pom.xml
+++ b/web/pom.xml
@@ -12,7 +12,7 @@
 	</parent>
 
 	<groupId>com.spy.dev</groupId>
-	<artifactId>web</artifactId>
+	<artifactId>spy-web</artifactId>
 	<version>0.0.1</version>
 	<packaging>war</packaging>
 	<name>web</name>
